:art: Refine data migration spacing https://github.com/siyuan-note/siyuan/issues/13728

--- a/app/src/assets/scss/business/_config.scss
+++ b/app/src/assets/scss/business/_config.scss
@@ -484,10 +484,6 @@
   padding: 16px 0;
 }
 
-.data-migration {
-  overflow-x: hidden;
-}
-
 .data-migration__item {
   cursor: default;
   min-width: 0;
